--- a/NskDotNet.Cake.Demo/NskDotNet.Cake.Demo.csproj
+++ b/NskDotNet.Cake.Demo/NskDotNet.Cake.Demo.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Cake.Common" Version="0.34.1" />
       <PackageReference Include="Cake.Core" Version="0.34.1" />
     </ItemGroup>
 
