specify nuget package properties

--- a/NskDotNet.Cake.Demo/NskDotNet.Cake.Demo.csproj
+++ b/NskDotNet.Cake.Demo/NskDotNet.Cake.Demo.csproj
@@ -2,6 +2,9 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
+        <PackageVersion>0.0.1</PackageVersion>
+        <Authors>Vitaly Litvinyuk</Authors>
+        <Description>Cake addin for demo on NSK DotNet meetup</Description>
     </PropertyGroup>
 
     <ItemGroup>
